--- a/notebook/chapter6.ipynb
+++ b/notebook/chapter6.ipynb
@@ -43,7 +43,7 @@
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Using custom data configuration default\n",
       "Reusing dataset ner-wikipedia-dataset (/root/.cache/huggingface/datasets/llm-book___ner-wikipedia-dataset/default/0.0.0/184bcf9be66116e777f2f534436226d47348676c93ba20cca58933f1b2b3b782)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 263.63it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 290.14it/s]\n"
      ]
     }
    ],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -828,8 +828,254 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4274/4274 [00:03<00:00, 1289.52ex/s]\n",
+      "100%|██████████| 534/534 [00:00<00:00, 1495.60ex/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers.tokenization_utils_base import BatchEncoding\n",
+    "\n",
+    "def preprocess_data(\n",
+    "    data: dict[str, Any],\n",
+    "    tokenizer: PreTrainedTokenizer,\n",
+    "    label2id: dict[int, str],\n",
+    ") -> BatchEncoding:\n",
+    "    \"\"\"データの前処理\"\"\"\n",
+    "    # テキストのトークナイゼーションを行う\n",
+    "    inputs = tokenizer(\n",
+    "        data[\"text\"],\n",
+    "        return_tensors=\"pt\",\n",
+    "        return_special_tokens_mask=True,\n",
+    "    )\n",
+    "    inputs = {k: v.squeeze(0) for k, v in inputs.items()}\n",
+    "    \n",
+    "    # 文字のlistとトークンのlistのアライメントをとる\n",
+    "    characters = list(data[\"text\"])\n",
+    "    tokens = tokenizer.convert_ids_to_tokens(inputs[\"input_ids\"])\n",
+    "    char_to_token_indices, _ = get_alignments(characters, tokens)\n",
+    "    \n",
+    "    # \"O\"のIDのlistを作成する\n",
+    "    labels = torch.zeros_like(inputs[\"input_ids\"])\n",
+    "    for entity in data[\"entities\"]: # 各固有表現を処理する\n",
+    "        start_token_indices = char_to_token_indices[entity[\"span\"][0]]\n",
+    "        end_token_indices = char_to_token_indices[\n",
+    "            entity[\"span\"][1] - 1\n",
+    "        ]\n",
+    "        # 文字に対するトークンが存在しなければスキップする\n",
+    "        if (\n",
+    "            len(start_token_indices)==0\n",
+    "            or len(end_token_indices)==0\n",
+    "        ):\n",
+    "            continue\n",
+    "        start, end = start_token_indices[0], end_token_indices[0]\n",
+    "        entity_type = entity[\"type\"]\n",
+    "        # 固有表現の開始トークンの位置に\"B-\"のIDを設定する\n",
+    "        labels[start] = label2id[f\"B-{entity_type}\"]\n",
+    "        # 固有表現の開始トークン以外の位置に\"I-\"のIDを設定する\n",
+    "        if start != end:\n",
+    "            labels[start + 1: end + 1] = label2id[f\"I-{entity_type}\"]\n",
+    "    # 特殊トークンの位置のIDは-100とする\n",
+    "    labels[torch.where(inputs[\"special_tokens_mask\"])] = -100\n",
+    "    inputs[\"labels\"] = labels\n",
+    "    return inputs\n",
+    "    \n",
+    "# 訓練セットに対して前処理を行う\n",
+    "train_dataset = dataset[\"train\"].map(\n",
+    "    preprocess_data,\n",
+    "    fn_kwargs={\n",
+    "        \"tokenizer\": tokenizer,\n",
+    "        \"label2id\": label2id,\n",
+    "    },\n",
+    "    remove_columns=dataset[\"train\"].column_names,\n",
+    ")\n",
+    "# 検証セットに対して前処理を行う\n",
+    "validation_dataset = dataset[\"validation\"].map(\n",
+    "    preprocess_data,\n",
+    "    fn_kwargs={\n",
+    "        \"tokenizer\": tokenizer,\n",
+    "        \"label2id\": label2id,\n",
+    "    },\n",
+    "    remove_columns=dataset[\"validation\"].column_names,\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### モデルの準備"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/torch/_utils.py:803: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "  return self.fget.__get__(instance, owner)()\n",
+      "Some weights of BertForTokenClassification were not initialized from the model checkpoint at tohoku-nlp/bert-base-japanese-v3 and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import (\n",
+    "    AutoModelForTokenClassification,\n",
+    "    DataCollatorForTokenClassification,\n",
+    ")\n",
+    "\n",
+    "# モデルを読み込む\n",
+    "model = AutoModelForTokenClassification.from_pretrained(\n",
+    "    model_name, label2id=label2id, id2label=id2label\n",
+    ")\n",
+    "# パラメータをメモリ上に隣接する形で配置\n",
+    "for param in model.parameters():\n",
+    "    param.data = param.data.contiguous()\n",
+    "# collate関数にDataCollatorForTokenClassificationを用いる\n",
+    "data_collator = DataCollatorForTokenClassification(tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### モデルのファインチューニング"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/transformers/training_args.py:1568: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n",
+      "/tmp/ipykernel_1620/359011269.py:24: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "  trainer = Trainer(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='670' max='670' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [670/670 01:35, Epoch 5/5]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.589900</td>\n",
+       "      <td>0.100571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.066900</td>\n",
+       "      <td>0.090802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.028200</td>\n",
+       "      <td>0.093027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.013000</td>\n",
+       "      <td>0.094801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>0.006300</td>\n",
+       "      <td>0.098298</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=670, training_loss=0.14084062087002086, metrics={'train_runtime': 96.3482, 'train_samples_per_second': 221.8, 'train_steps_per_second': 6.954, 'total_flos': 1070012411245680.0, 'train_loss': 0.14084062087002086, 'epoch': 5.0})"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import Trainer, TrainingArguments\n",
+    "from transformers.trainer_utils import set_seed\n",
+    "\n",
+    "# 乱数シードを42に固定する\n",
+    "set_seed(42)\n",
+    "\n",
+    "# Trainerに渡す引数を初期化する\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir=\"../model/output_bert_ner\",\n",
+    "    per_device_train_batch_size=32,\n",
+    "    per_device_eval_batch_size=32,\n",
+    "    learning_rate=1e-4,\n",
+    "    lr_scheduler_type=\"linear\",\n",
+    "    warmup_ratio=0.1,\n",
+    "    num_train_epochs=5,\n",
+    "    evaluation_strategy=\"epoch\",\n",
+    "    save_strategy=\"epoch\",\n",
+    "    logging_strategy=\"epoch\",\n",
+    "    fp16=True,\n",
+    "    report_to=\"none\",\n",
+    ")\n",
+    "\n",
+    "# Trainerを初期化する\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    tokenizer=tokenizer,\n",
+    "    train_dataset=train_dataset,\n",
+    "    eval_dataset=validation_dataset,\n",
+    "    data_collator=data_collator,\n",
+    "    args=training_args,\n",
+    ")\n",
+    "\n",
+    "# 訓練する\n",
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
