--- a/notebook/chapter6.ipynb
+++ b/notebook/chapter6.ipynb
@@ -43,7 +43,7 @@
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Using custom data configuration default\n",
       "Reusing dataset ner-wikipedia-dataset (/root/.cache/huggingface/datasets/llm-book___ner-wikipedia-dataset/default/0.0.0/184bcf9be66116e777f2f534436226d47348676c93ba20cca58933f1b2b3b782)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 290.14it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 273.22it/s]\n"
      ]
     }
    ],
@@ -829,15 +829,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4274/4274 [00:03<00:00, 1289.52ex/s]\n",
-      "100%|██████████| 534/534 [00:00<00:00, 1495.60ex/s]\n"
+      "100%|██████████| 4274/4274 [00:03<00:00, 1155.79ex/s]\n",
+      "100%|██████████| 534/534 [00:00<00:00, 1397.92ex/s]\n"
      ]
     }
    ],
@@ -917,13 +917,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/usr/local/lib/python3.10/dist-packages/torchvision/datapoints/__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
+      "/usr/local/lib/python3.10/dist-packages/torchvision/transforms/v2/__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
       "/usr/local/lib/python3.10/dist-packages/torch/_utils.py:803: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
       "  return self.fget.__get__(instance, owner)()\n",
       "Some weights of BertForTokenClassification were not initialized from the model checkpoint at tohoku-nlp/bert-base-japanese-v3 and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
@@ -957,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +970,7 @@
      "text": [
       "/usr/local/lib/python3.10/dist-packages/transformers/training_args.py:1568: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
       "  warnings.warn(\n",
-      "/tmp/ipykernel_1620/359011269.py:24: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "/tmp/ipykernel_1678/359011269.py:24: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(\n"
      ]
     },
@@ -977,7 +981,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='670' max='670' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [670/670 01:35, Epoch 5/5]\n",
+       "      [670/670 01:42, Epoch 5/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -990,28 +994,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.589900</td>\n",
-       "      <td>0.100571</td>\n",
+       "      <td>0.654500</td>\n",
+       "      <td>0.098389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.066900</td>\n",
-       "      <td>0.090802</td>\n",
+       "      <td>0.068500</td>\n",
+       "      <td>0.091702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.028200</td>\n",
-       "      <td>0.093027</td>\n",
+       "      <td>0.031200</td>\n",
+       "      <td>0.091689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.013000</td>\n",
-       "      <td>0.094801</td>\n",
+       "      <td>0.011600</td>\n",
+       "      <td>0.100583</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>0.006300</td>\n",
-       "      <td>0.098298</td>\n",
+       "      <td>0.005700</td>\n",
+       "      <td>0.104642</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -1026,10 +1030,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=670, training_loss=0.14084062087002086, metrics={'train_runtime': 96.3482, 'train_samples_per_second': 221.8, 'train_steps_per_second': 6.954, 'total_flos': 1070012411245680.0, 'train_loss': 0.14084062087002086, 'epoch': 5.0})"
+       "TrainOutput(global_step=670, training_loss=0.15430139712433316, metrics={'train_runtime': 102.5866, 'train_samples_per_second': 208.312, 'train_steps_per_second': 6.531, 'total_flos': 1070012411245680.0, 'train_loss': 0.15430139712433316, 'epoch': 5.0})"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,6 +1073,205 @@
     "\n",
     "# 訓練する\n",
     "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 固有表現の予測・抽出"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 固有表現ラベルの予測"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "入力: {'input_ids': [[0, 1], [2, 3]], 'labels': [[1, 2], [3, 4]]}\n",
+      "出力: [{'input_ids': [0, 1], 'labels': [1, 2]}, {'input_ids': [2, 3], 'labels': [3, 4]}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_list_dict_to_dict_list(\n",
+    "    list_dict: dict[str, list]\n",
+    ") -> list[dict[str, list]]:\n",
+    "    \"\"\"ミニバッチのデータを事例単位のlistに変換\"\"\"\n",
+    "    dict_list = []\n",
+    "    # dictのキーのlistを作成する\n",
+    "    keys = list(list_dict.keys())\n",
+    "    for idx in range(len(list_dict[keys[0]])): # 各事例で処理する\n",
+    "        # dictの各キーからデータを取り出してlistに追加する\n",
+    "        dict_list.append({key: list_dict[key][idx] for key in keys})\n",
+    "    return dict_list\n",
+    "\n",
+    "# ミニバッチのデータを事例単位のlistに変換する\n",
+    "list_dict = {\n",
+    "    \"input_ids\": [[0, 1], [2, 3]],\n",
+    "    \"labels\": [[1, 2], [3, 4]],\n",
+    "}\n",
+    "dict_list = convert_list_dict_to_dict_list(list_dict)\n",
+    "print(f\"入力: {list_dict}\")\n",
+    "print(f\"出力: {dict_list}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 17/17 [00:00<00:00, 39.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 15, 16, 0, 0, 13, 14, 14, 0, 0, 0, 0, 0, 0, 0, 0, 0, 15, 13, 14, 14, 14, 13, 0, 0, 0, 0, 0, 0, 15, 16, 15, 13, 14, 14, 14, 14, 13, 13, 13, 14, 14, 0, 0, 0, 13, 13, 14, 14, 14, 0, 0, 13, 14, 14, 0, 0, 0, 0, 0, 0, 15, 16, 16, 0, 13, 14, 14, 14, 14, 15, 0, 0, 15, 15, 15, 16, 16, 0, 13, 14]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "from torch.utils.data import DataLoader\n",
+    "from transformers import PreTrainedModel\n",
+    "\n",
+    "def run_prediction(\n",
+    "    dataloader: DataLoader, \n",
+    "    model: PreTrainedModel\n",
+    ") -> list[dict[str, Any]]:\n",
+    "    \"\"\"予測スコアに基づき固有表現ラベルを予測\"\"\"\n",
+    "    predictions = []\n",
+    "    for batch in tqdm(dataloader): # 各ミニバッチを処理する\n",
+    "        inputs = {\n",
+    "            k: v.to(model.device)\n",
+    "            for k, v in batch.items()\n",
+    "            if k != \"special_tokens_mask\"\n",
+    "        }\n",
+    "        # 予測スコアを取得する\n",
+    "        logits = model(**inputs).logits\n",
+    "        # 最もスコアの高いIDを取得する\n",
+    "        batch[\"pred_label_ids\"] = logits.argmax(-1)\n",
+    "        batch = {k: v.cpu().tolist() for k, v in batch.items()}\n",
+    "        # ミニバッチのデータを事例単位のlistに変換する\n",
+    "        predictions += convert_list_dict_to_dict_list(batch)\n",
+    "    return predictions\n",
+    "\n",
+    "# ミニバッチの作成にDataLoaderを用いる\n",
+    "validation_dataloader = DataLoader(\n",
+    "    validation_dataset,\n",
+    "    batch_size=32,\n",
+    "    shuffle=False,\n",
+    "    collate_fn=data_collator,\n",
+    ")\n",
+    "# 固有表現ラベルを予測する\n",
+    "predictions = run_prediction(validation_dataloader, model)\n",
+    "print(predictions[0][\"pred_label_ids\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 固有表現の抽出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'curid': '1662110',\n",
+      " 'entities': [{'name': '復活篇', 'span': [1, 4], 'type': '製品名'},\n",
+      "              {'name': 'グリーンバニー', 'span': [6, 13], 'type': '法人名'}],\n",
+      " 'pred_entities': [{'name': '復活篇', 'span': [1, 4], 'type': '製品名'},\n",
+      "                   {'name': 'グリーンバニー', 'span': [6, 13], 'type': '法人名'}],\n",
+      " 'text': '「復活篇」はグリーンバニーからの発売となっている。'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from seqeval.metrics.sequence_labeling import get_entities\n",
+    "\n",
+    "def extract_entities(\n",
+    "    predictions: list[dict[str, Any]],\n",
+    "    dataset: list[dict[str, Any]],\n",
+    "    tokenizer: PreTrainedTokenizer,\n",
+    "    id2label: dict[int, str],\n",
+    ") -> list[dict[str, Any]]:\n",
+    "    \"\"\"固有表現を抽出\"\"\"\n",
+    "    results = []\n",
+    "    for prediction, data in zip(predictions, dataset):\n",
+    "        # 文字列のlistを取得する\n",
+    "        characters = list(data[\"text\"])\n",
+    "        \n",
+    "        # 特殊トークンを除いたトークンのlistと予測ラベルのlistを取得する\n",
+    "        tokens, pred_labels = [], []\n",
+    "        all_tokens = tokenizer.convert_ids_to_tokens(\n",
+    "            prediction[\"input_ids\"]\n",
+    "        )\n",
+    "        for token, label_id in zip(\n",
+    "            all_tokens, prediction[\"pred_label_ids\"]\n",
+    "        ):\n",
+    "            # 特殊トークン以外をlistに追加する\n",
+    "            if token not in tokenizer.all_special_tokens:\n",
+    "                tokens.append(token)\n",
+    "                pred_labels.append(id2label[label_id])\n",
+    "                \n",
+    "        # 文字のlistとトークンのlistのアライメントを取る\n",
+    "        _, token_to_char_indices = get_alignments(characters, tokens)\n",
+    "        \n",
+    "        # 予測ラベルのlistから固有表現タイプと、\n",
+    "        # トークン単位の開始位置と終了位置を取得して、\n",
+    "        # それらを正解データと同じ形式にする\n",
+    "        pred_entities = []\n",
+    "        for entity in get_entities(pred_labels):\n",
+    "            entity_type, token_start, token_end = entity\n",
+    "            # 文字単位の開始位置を取得する\n",
+    "            char_start = token_to_char_indices[token_start][0]\n",
+    "            # 文字単位の終了位置を取得する\n",
+    "            char_end = token_to_char_indices[token_end][-1] + 1\n",
+    "            pred_entity = {\n",
+    "                \"name\": \"\".join(characters[char_start:char_end]),\n",
+    "                \"span\": [char_start, char_end],\n",
+    "                \"type\": entity_type,\n",
+    "            }\n",
+    "            pred_entities.append(pred_entity)\n",
+    "        data[\"pred_entities\"] = pred_entities\n",
+    "        results.append(data)\n",
+    "    return results\n",
+    "\n",
+    "# 固有表現を抽出する\n",
+    "results = extract_entities(\n",
+    "    predictions, dataset[\"validation\"], tokenizer, id2label\n",
+    ")\n",
+    "pprint(results[0])"
    ]
   },
   {
