--- a/notebook/chapter7.ipynb
+++ b/notebook/chapter7.ipynb
@@ -34,7 +34,7 @@
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Using custom data configuration default\n",
       "Reusing dataset livedoor-news-corpus (/root/.cache/huggingface/datasets/llm-book___livedoor-news-corpus/default/0.0.0/0e68df407299550ef5ff2e77547963ebf3cb31cdf6cb53be6ab1aac47965d5dd)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 236.36it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 1138.21it/s]\n"
      ]
     }
    ],
@@ -1660,6 +1660,209 @@
     "display(\n",
     "    pd.DataFrame(results)[:3][[\"content\", \"title\", \"generated_title\"]]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 多様な生成方法による見出し生成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "model_name = \"llm-book/t5-base-long-livedoor-news-corpus\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# モデルを読み込む\n",
+    "from transformers import AutoModelForSeq2SeqLM\n",
+    "model_name = \"llm-book/t5-base-long-livedoor-news-corpus\"\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(model_name).to(\"cuda:0\")# パラメータをメモリ上に隣接した形で配置\n",
+    "# これを実行しない場合、モデルの保存でエラーになることがある\n",
+    "for param in model.parameters():\n",
+    "    param.data = param.data.contiguous()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "記事: そろそろ梅雨がやってきます。この時期に多い女子のお悩みといえば、ヘアスタイルに関すること。  湿気で広がった髪がどうしてもまとまらず、とりあえず適当にまとめて家を飛び出したり、帽子を被ってごまかしたり……という経験、ありますよね。でも、じめじめした季節だってかわいく・オシャレに過ごしたいもの。  髪が広がりやすい梅雨の時期は、アレンジヘアで乗り切るのがベスト。「ヘアアレンジというと、難しそうな印象がありますが、ちょっとしたコツさえおさえれば、ぱぱっと簡単にできますよ！」と話してくれたのは、美容室「MADURiCA por DIFINO」のスタイリスト、山口祐亮さん。  ではさっそく、バクハツしがちなヘアをオシャレにごまかすアレンジテクニックを教えてください！  バクハツヘアもすっきり！ 楽ちんヘアアレンジ  元の髪はこんな感じ。ここからアレンジをしていきます。 基本の「まとまる」テクニック おしゃれなアレンジヘアに見せるポイントは、アレンジの前に毛先をアイロンやカーラーで巻いておくこと。このひと手間でまとまり方や仕上がりが変わります！  毛先に動きがあるだけで、ただのポニーテールもぐっとオシャレに見えるし、後れ毛だってアクセントに。コツは髪をいくつもの部分に分けて少しずつ巻くこと。慣れてしまえばそんなに時間はかかりません。  ＜簡単アレンジ1＞ ふんわりルーズ感がかわいい！ 簡単アップスタイル  完成形 蒸し暑い日はアップスタイルにしたいですよね。 このアレンジなら、編み込みがアクセントになって横顔美人！ 後ろから見たときも、ランダムに散らばった毛先がキュートです。下準備として、毛先はアイロンやカーラーで巻いておきましょう。   1.  前髪や顔周りの髪は残し、トップ〜耳上までの髪を前から見て約4：6くらいの割合になるように分け、多い方をざっくりと編み込みにして、ゴムで止めます。  編み込みを作ったら、少しずつ毛を引き出してルーズな感じにするとかわいい印象に。   2.  髪の毛の量が多い人は、後ろ髪を上下に分けて、下側の真ん中あたりの髪の一部を三つ編みにしてねじり、ピンで留めます。  これが土台になり、このあとピンをさしやすくなります。三つ編みにする量は自分の髪の量に合わせて調節してください。   3.  残った髪を何束かに分け、ねじって丸めながらバランスを見てピンで留めていきます。髪の広がりやバラつきが気になるところにどんどんピンをさしていってOK。  留めた髪の毛は毛先を広げたり逆毛を立てたり、ラフな感じに散らします。事前に毛先をアイロンなどで巻いておけば、適当にまとめてもかわいく仕上がります。  これで完成！ ＜ワンポイントアドバイス＞ 髪の量が多い人は、ピンを広げてたくさんの毛を一気に留めてしまいがち。 これではすぐにピンが外れてスタイルが崩れてしまいます。ピンは広げずにさして留めた方が取れにくいそう。今回のアレンジのように、髪をねじって留めるようにすれば、どこかがきちんと留まってさえいれば大丈夫です。  ＜簡単アレンジ2＞ オフィスでも、デートでも！ 万能ハーフアップ  完成形 簡単に作れる上品な印象のハーフアップ。後ろ姿もキレイです。きっちり作るとお堅い感じになってしまいがちですが、このアレンジならカジュアルなシーンにもぴったり。こちらも事前に毛先を巻いておくと、スタイルが決まります。   1.  好きな位置で分け目を作り、左右両方に、トップ〜耳の上の髪でやや細めの三つ編みを作っておきます。毛を引き出したりしてルーズな感じで作りましょう。  分け目を左右どちらかに寄せるとトップがふんわりして大人っぽくなります。    2.  片側に寄せてハーフアップを作り、ねじりながらまとめます。  ねじった髪の１番外側の髪（A）と、地肌の方に残っている髪（B）とをピンで縫うように留めます。ポイントは、Aの上からピンを差し込み、Bの髪をすくって上に向かってさすこと。ピンは2、3本留めておくとよいでしょう。    3.  1.で作った三つ編みを、ハーフアップをまとめたところに集めて、ピンで留めます。長さが届かなければ、先ほどのBの部分にピンで留めてまとめて。  これで完成！  どちらのスタイルも、完成後にあまり固めすぎないスプレーをしておくと、ふんわり感が持続し、崩れにくいですよ。  梅雨時の髪のクセ・広がりをおさえるテクニック  髪のクセや広がりをアレンジでごまかしちゃうのもいいけど、毎日のケアで気を付けることはあるのでしょうか？ 山口さんに聞いてみました。  テク1：髪の広がりを抑えるなら、とことん保湿！ 髪が広がる原因は、乾燥したところに水分が入り込むから。つまり、水分が入るスキマを作らないようにする必要があるのです。そのためにはお風呂上がりの保湿が重要。洗い流さないトリートメントを使って、きちんと保湿するようにしましょう。 テク2：クセを伸ばすには焦らず冷却時間をおく！ ブローしてもクセがなかなか直らない場合、きちんと冷やしていないことが原因かもしれません。ブローの際、クセを伸ばしたい部分を乾かしたら、ブラシで引っ張ったまましばらく待つか、ドライヤーの冷風モードを活用しましょう。「髪は冷えるときに固まるので、きちんと冷やさないとせっかくのスタイルが定着しません。ドライヤーの冷風モードはそのためにあるんですよ」と山口さん。涼むための機能ではなかったんですね〜。 梅雨どきのヘアスタイルにさんざん悩まされてきた女子は多いはず。今年は簡単アレンジやちょっとしたテクニックをマスターして、オシャレなスタイルで梅雨を乗り切りましょう！   MADURiCA por DIFINO お問い合わせ：03-6419-1921 営業時間： 月・木　11：00〜21：00 水・金　12：00〜22：00 土　10：00〜19：00 定休日：火曜日 住所：渋谷区神宮前5-51-8　ポルト青山8F アクセス：東京メトロ表参道駅B2出口より徒歩5分  ビルの8Fにあり、窓から表参道を見おろすことができる気持ちのいいロケーション。店内は隅々までオシャレな内装で、居心地バツグン。ゆったりくつろげる個室も用意されています。  ひとりひとりの髪質やくせに合わせ、毛束をひねりながら切っていく「Rカット」はこの美容室オリジナル。髪の悩みがある人は、一度相談してみては。 （写真：菅井淳子　文：K-Writer’s Club 八木友里恵）\n",
+      "見出し: 湿気に負けない！ 梅雨の「楽カワ」ヘアアレンジ\n"
+     ]
+    }
+   ],
+   "source": [
+    "content = dataset[\"test\"][434][\"content\"]\n",
+    "title = dataset[\"test\"][434][\"title\"]\n",
+    "print(f\"記事: {content}\")\n",
+    "print(f\"見出し: {title}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import partial\n",
+    "from transformers import pipeline\n",
+    "from transformers.trainer_utils import set_seed\n",
+    "\n",
+    "# 乱数シードを42に設定\n",
+    "set_seed(42)\n",
+    "\n",
+    "# モデルを固定したpiplineを生成する\n",
+    "fixed_model_pipeline = partial(\n",
+    "    pipeline,\n",
+    "    task=\"summarization\",\n",
+    "    model=model,\n",
+    "    tokenizer=tokenizer,\n",
+    "    device=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### テキスト生成における探索アルゴリズム"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 貪欲法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梅雨のヘアスタイルは簡単アレンジで! 簡単アレンジで梅雨を乗り切りよう\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fixed_model_pipeline()(content)[0][\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梅雨のヘアスタイルは簡単アレンジで! 簡単ヘアアレンジテクニック【ビューティー特集】\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarization_pipeline = fixed_model_pipeline(no_repeat_ngram_size=2)\n",
+    "print(summarization_pipeline(content)[0][\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ビームサーチ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梅雨のヘアスタイルをオシャレに! 簡単アレンジで梅雨を乗り切ろう!\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarization_pipeline = fixed_model_pipeline(num_beams=3) # ビーム幅3\n",
+    "print(summarization_pipeline(content)[0][\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梅雨時の髪のクセ・広がりをおさえる! 簡単アレンジで梅雨を\n",
+      "梅雨時の髪のクセ・広がりをおさえるテクニック\n",
+      "梅雨時の髪のクセ・広がりをおさえる! 簡単アレンジ&ちょっとした\n",
+      "梅雨のヘアスタイルをオシャレに! 簡単アレンジで梅雨を乗り切ろう!\n",
+      "梅雨時の髪のクセ・広がりをごまかす! 簡単アレンジテクニック【\n",
+      "梅雨時の髪のクセ・広がりをごまかす! 簡単アレンジで梅雨\n",
+      "梅雨時の髪のクセ・広がりをおさえるアレンジテクニック\n",
+      "梅雨時の髪のクセ・広がりをおさえる簡単アレンジテクニック\n",
+      "梅雨のヘアスタイルをオシャレに! 簡単アレンジで梅雨を乗り切ろう\n",
+      "梅雨のヘアスタイルをオシャレに! 簡単アレンジで梅雨を乗り切りよう!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 最終候補（10）を表示\n",
+    "summarization_pipeline = fixed_model_pipeline(\n",
+    "    num_beams=10, num_return_sequences=10\n",
+    ")\n",
+    "for summary in summarization_pipeline(content):\n",
+    "    print(summary[\"summary_text\"])"
    ]
   },
   {
