--- a/notebook/chapter7.ipynb
+++ b/notebook/chapter7.ipynb
@@ -34,7 +34,7 @@
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Using custom data configuration default\n",
       "Reusing dataset livedoor-news-corpus (/root/.cache/huggingface/datasets/llm-book___livedoor-news-corpus/default/0.0.0/0e68df407299550ef5ff2e77547963ebf3cb31cdf6cb53be6ab1aac47965d5dd)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 1138.21it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 235.45it/s]\n"
      ]
     }
    ],
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1727,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1739,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1793,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1860,6 +1860,214 @@
     "# 最終候補（10）を表示\n",
     "summarization_pipeline = fixed_model_pipeline(\n",
     "    num_beams=10, num_return_sequences=10\n",
+    ")\n",
+    "for summary in summarization_pipeline(content):\n",
+    "    print(summary[\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### サンプリングを用いたテキスト生成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "うっすらパーマで崩れにくい!? 梅雨入りを涼しくパチリ!\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarization_pipeline = fixed_model_pipeline(do_sample=True, top_k=0)\n",
+    "print(summarization_pipeline(content)[0][\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梅雨のヘアをおしゃれにごまかす! 簡単アレンジテクニック【ビューティー特集】\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarization_pipeline = fixed_model_pipeline(\n",
+    "    do_sample=True, top_k=0, temperature=0.5\n",
+    ")\n",
+    "print(summarization_pipeline(content)[0][\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ホワイトデーは上手にこなせライヴ「MADURiCA por DIFINO\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarization_pipeline = fixed_model_pipeline(\n",
+    "    do_sample=True, top_k=0, temperature=1.3\n",
+    ")\n",
+    "print(summarization_pipeline(content)[0][\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### top-kサンプリング"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梅雨の髪をごまかす簡単アレンジテクニックとは?\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarization_pipeline = fixed_model_pipeline(\n",
+    "    do_sample=True, top_k=10, temperature=1.3\n",
+    ")\n",
+    "print(summarization_pipeline(content)[0][\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### top-pサンプリング"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梅雨時にぴったりなアレンジ術/オシャレ女子に嬉しい“女子力アップ”テクニック\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarization_pipeline = fixed_model_pipeline(\n",
+    "    do_sample=True, top_k=0, top_p=0.5, temperature=1.3\n",
+    ")\n",
+    "print(summarization_pipeline(content)[0][\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 長さを調節したテキスト生成\n",
+    "- トークンの長さで制御（文字数は制御できない）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梅雨のヘアスタイル\n",
+      "梅雨の髪\n",
+      "梅雨のヘア\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarization_pipeline = fixed_model_pipeline(\n",
+    "    num_beams=3,\n",
+    "    num_return_sequences=3,\n",
+    "    min_length=5,\n",
+    "    max_length=5,\n",
+    ")\n",
+    "for summary in summarization_pipeline(content):\n",
+    "    print(summary[\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梅雨のヘアスタイルをオシャレに! 簡単アレンジで梅雨を乗り切ろう【オトナ女子のリアルな悩み解決術 vol.7】Present\n",
+      "梅雨のヘアスタイルをオシャレに! 簡単アレンジで梅雨を乗り切ろう【オトナ女子のリアルな悩み解決術 vol.7】【ビューティー】\n",
+      "梅雨のヘアスタイルをオシャレに! 簡単アレンジで梅雨を乗り切ろう【オトナ女子のリアルな悩み解決術 vol.7】【ビューティー特集\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarization_pipeline = fixed_model_pipeline(\n",
+    "    num_beams=3,\n",
+    "    num_return_sequences=3,\n",
+    "    min_length=35,\n",
+    "    max_length=35,\n",
+    ")\n",
+    "for summary in summarization_pipeline(content):\n",
+    "    print(summary[\"summary_text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梅雨のヘアスタイルは、アレンジできれいに! 簡単アレンジ&ちょっとしたテクニックをマスターして梅雨を乗り切りましょう【ビューティーアイテム図鑑 vol.7】\n",
+      "梅雨のヘアスタイルを簡単アレンジで! 「MADURiCA POR DIFINO」の山口祐亮さんが教える「簡単アレンジ」【\n",
+      "梅雨のヘアスタイルは簡単! 簡単アレンジで梅雨を乗り切る【ビューティーサロン】vol.11【ヘアアレンジ】 vol.5【オトナ女子の\n"
+     ]
+    }
+   ],
+   "source": [
+    "summarization_pipeline = fixed_model_pipeline(\n",
+    "    num_beams=3,\n",
+    "    num_return_sequences=3,\n",
+    "    min_length=35,\n",
+    "    max_length=35,\n",
+    "    do_sample=True,\n",
+    "    temperature=1.3,\n",
+    "    no_repeat_ngram_size=3,\n",
     ")\n",
     "for summary in summarization_pipeline(content):\n",
     "    print(summary[\"summary_text\"])"
